@@ -15,8 +15,10 @@ repositories {
 }
 
 dependencies {
-    api 'org.springframework:spring-webmvc:5.3.23'
-    api 'org.springframework:spring-test:5.3.23'
+    implementation group: 'org.springframework', name: 'spring-web', version: '6.1.6'
+    implementation group: 'org.springframework', name: 'spring-aop', version: '6.1.6'
+    implementation group: 'org.springframework', name: 'spring-context', version: '6.1.6'
+    api 'org.springframework:spring-test:6.1.6'
     api 'org.junit.jupiter:junit-jupiter:5.8.2'
     api 'org.junit.platform:junit-platform-engine:1.8.2'
     // api 'org.junit.platform:junit-platform-runner:1.8.2'
@@ -80,6 +82,21 @@ tasks.withType(JavaCompile).each {
 test {
     useJUnitPlatform()
     jvmArgs(['--enable-preview'])
+}
+
+task createRuntime(type: Exec) {
+    doFirst {
+        delete "$layout.projectDirectory/runtime"
+    }
+
+    commandLine 'jlink',
+            '--add-modules', 'java.base,java.desktop,java.logging,java.scripting,java.xml.bind',
+            '--bind-services',
+            '--no-header-files',
+            '--no-man-pages',
+            '--compress=2',
+            '--strip-debug',
+            '--output', "$layout.projectDirectory/runtime"
 }
 
 //task wrapper(type: Wrapper) {
